--- a/Layouts/Level1_Boss.xml
+++ b/Layouts/Level1_Boss.xml
@@ -607,6 +607,7 @@
                         <HasHitSomeone>false</HasHitSomeone>
                         <IsStunned>false</IsStunned>
                         <Special_DMG>2</Special_DMG>
+                        <IsSpecialStarted>false</IsSpecialStarted>
                     </instance-variables>
                     <behavior-instances>
                         <behavior-instance type="PinToCollider" />
@@ -648,6 +649,7 @@
                         <HasHitSomeone>false</HasHitSomeone>
                         <IsStunned>false</IsStunned>
                         <Special_DMG>5</Special_DMG>
+                        <IsSpecialStarted>false</IsSpecialStarted>
                     </instance-variables>
                     <behavior-instances>
                         <behavior-instance type="PinToCollider" />
@@ -689,6 +691,7 @@
                         <HasHitSomeone>false</HasHitSomeone>
                         <IsStunned>false</IsStunned>
                         <Special_DMG>15</Special_DMG>
+                        <IsSpecialStarted>false</IsSpecialStarted>
                     </instance-variables>
                     <behavior-instances>
                         <behavior-instance type="PinToCollider" />
@@ -730,6 +733,7 @@
                         <HasHitSomeone>false</HasHitSomeone>
                         <IsStunned>false</IsStunned>
                         <Special_DMG>2</Special_DMG>
+                        <IsSpecialStarted>false</IsSpecialStarted>
                     </instance-variables>
                     <behavior-instances>
                         <behavior-instance type="PinToCollider" />
