--- a/Layouts/Intro.xml
+++ b/Layouts/Intro.xml
@@ -29,10 +29,12 @@
             <blend-mode>0</blend-mode>
             <effect-fallback>0</effect-fallback>
             <instances>
-                <instance type="BackgroundProva" uid="2">
+                <instance type="IntroMenuBackground" uid="2">
                     <properties>
                         <initial-visibility>Visible</initial-visibility>
-                        <hotspot>Top-left</hotspot>
+                        <initial-animation>Default</initial-animation>
+                        <initial-frame>0</initial-frame>
+                        <collisions>Enabled</collisions>
                     </properties>
                     <blend-mode>0</blend-mode>
                     <effect-fallback>0</effect-fallback>
@@ -82,8 +84,8 @@
                     <blend-mode>0</blend-mode>
                     <effect-fallback>0</effect-fallback>
                     <world>
-                        <x>1250</x>
-                        <y>500</y>
+                        <x>-375</x>
+                        <y>375</y>
                         <z>0</z>
                         <width>500</width>
                         <height>150</height>
@@ -108,8 +110,8 @@
                     <blend-mode>0</blend-mode>
                     <effect-fallback>0</effect-fallback>
                     <world>
-                        <x>1250</x>
-                        <y>250</y>
+                        <x>-375</x>
+                        <y>125</y>
                         <z>0</z>
                         <width>500</width>
                         <height>150</height>
@@ -134,8 +136,8 @@
                     <blend-mode>0</blend-mode>
                     <effect-fallback>0</effect-fallback>
                     <world>
-                        <x>1250</x>
-                        <y>750</y>
+                        <x>-375</x>
+                        <y>625</y>
                         <z>0</z>
                         <width>500</width>
                         <height>150</height>
@@ -173,8 +175,8 @@
                     <blend-mode>0</blend-mode>
                     <effect-fallback>0</effect-fallback>
                     <world>
-                        <x>1250</x>
-                        <y>250</y>
+                        <x>-375</x>
+                        <y>125</y>
                         <z>0</z>
                         <width>450</width>
                         <height>100</height>
@@ -212,8 +214,8 @@
                     <blend-mode>0</blend-mode>
                     <effect-fallback>0</effect-fallback>
                     <world>
-                        <x>1250</x>
-                        <y>750</y>
+                        <x>-375</x>
+                        <y>625</y>
                         <z>0</z>
                         <width>450</width>
                         <height>100</height>
@@ -239,8 +241,8 @@
                     <blend-mode>0</blend-mode>
                     <effect-fallback>0</effect-fallback>
                     <world>
-                        <x>850</x>
-                        <y>-250</y>
+                        <x>638</x>
+                        <y>-554</y>
                         <z>0</z>
                         <width>450</width>
                         <height>175</height>
@@ -278,8 +280,8 @@
                     <blend-mode>0</blend-mode>
                     <effect-fallback>0</effect-fallback>
                     <world>
-                        <x>1250</x>
-                        <y>500</y>
+                        <x>-375</x>
+                        <y>375</y>
                         <z>0</z>
                         <width>450</width>
                         <height>100</height>
@@ -305,8 +307,8 @@
                     <blend-mode>0</blend-mode>
                     <effect-fallback>0</effect-fallback>
                     <world>
-                        <x>375</x>
-                        <y>1275</y>
+                        <x>235</x>
+                        <y>1627</y>
                         <z>0</z>
                         <width>1675</width>
                         <height>250</height>
