--- a/Layouts/Level1.xml
+++ b/Layouts/Level1.xml
@@ -4871,8 +4871,8 @@
                     <blend-mode>0</blend-mode>
                     <effect-fallback>0</effect-fallback>
                     <world>
-                        <x>17215</x>
-                        <y>515</y>
+                        <x>17200</x>
+                        <y>569</y>
                         <z>0</z>
                         <width>293.760101318</width>
                         <height>587.520202637</height>
@@ -4893,8 +4893,8 @@
                     <blend-mode>0</blend-mode>
                     <effect-fallback>0</effect-fallback>
                     <world>
-                        <x>18385</x>
-                        <y>515</y>
+                        <x>18370</x>
+                        <y>569</y>
                         <z>0</z>
                         <width>293.760101318</width>
                         <height>587.520202637</height>
@@ -4915,8 +4915,8 @@
                     <blend-mode>0</blend-mode>
                     <effect-fallback>0</effect-fallback>
                     <world>
-                        <x>17759</x>
-                        <y>516</y>
+                        <x>17744</x>
+                        <y>570</y>
                         <z>0</z>
                         <width>437</width>
                         <height>432</height>
@@ -4937,8 +4937,8 @@
                     <blend-mode>0</blend-mode>
                     <effect-fallback>0</effect-fallback>
                     <world>
-                        <x>18062</x>
-                        <y>304</y>
+                        <x>18047</x>
+                        <y>358</y>
                         <z>0</z>
                         <width>-288</width>
                         <height>288</height>
@@ -4959,8 +4959,8 @@
                     <blend-mode>0</blend-mode>
                     <effect-fallback>0</effect-fallback>
                     <world>
-                        <x>17498</x>
-                        <y>308</y>
+                        <x>17483</x>
+                        <y>362</y>
                         <z>0</z>
                         <width>288</width>
                         <height>288</height>
@@ -4981,8 +4981,8 @@
                     <blend-mode>0</blend-mode>
                     <effect-fallback>0</effect-fallback>
                     <world>
-                        <x>18077</x>
-                        <y>686</y>
+                        <x>18062</x>
+                        <y>740</y>
                         <z>0</z>
                         <width>-288</width>
                         <height>288</height>
@@ -5003,8 +5003,8 @@
                     <blend-mode>0</blend-mode>
                     <effect-fallback>0</effect-fallback>
                     <world>
-                        <x>17521</x>
-                        <y>709</y>
+                        <x>17506</x>
+                        <y>763</y>
                         <z>0</z>
                         <width>288</width>
                         <height>288</height>
@@ -5025,8 +5025,8 @@
                     <blend-mode>0</blend-mode>
                     <effect-fallback>0</effect-fallback>
                     <world>
-                        <x>17805</x>
-                        <y>775</y>
+                        <x>17790</x>
+                        <y>829</y>
                         <z>0</z>
                         <width>-288</width>
                         <height>288</height>
@@ -5667,6 +5667,61 @@
                         <hotspotY>0.5</hotspotY>
                         <angle>0</angle>
                         <opacity>1</opacity>
+                    </world>
+                </instance>
+                <instance type="SMExplosion" uid="386">
+                    <properties>
+                        <initial-visibility>Visible</initial-visibility>
+                        <initial-animation>Default</initial-animation>
+                        <initial-frame>0</initial-frame>
+                        <collisions>Enabled</collisions>
+                    </properties>
+                    <blend-mode>0</blend-mode>
+                    <effect-fallback>0</effect-fallback>
+                    <world>
+                        <x>1250</x>
+                        <y>875</y>
+                        <z>0</z>
+                        <width>2041.241333008</width>
+                        <height>1224.744873047</height>
+                        <depth>0</depth>
+                        <hotspotX>0.5</hotspotX>
+                        <hotspotY>0.5</hotspotY>
+                        <angle>0</angle>
+                        <opacity>1</opacity>
+                    </world>
+                </instance>
+                <instance type="SMExplosionFader" uid="387">
+                    <properties>
+                        <initial-visibility>Visible</initial-visibility>
+                        <initial-animation>Default</initial-animation>
+                        <initial-frame>0</initial-frame>
+                        <collisions>Enabled</collisions>
+                    </properties>
+                    <behavior-instances>
+                        <behavior-instance type="Fade">
+                            <properties>
+                                <active-at-start>No</active-at-start>
+                                <fade-in-time>0</fade-in-time>
+                                <wait-time>0</wait-time>
+                                <fade-out-time>1</fade-out-time>
+                                <destroy>No</destroy>
+                            </properties>
+                        </behavior-instance>
+                    </behavior-instances>
+                    <blend-mode>0</blend-mode>
+                    <effect-fallback>0</effect-fallback>
+                    <world>
+                        <x>1250</x>
+                        <y>875</y>
+                        <z>0</z>
+                        <width>2500</width>
+                        <height>1250</height>
+                        <depth>0</depth>
+                        <hotspotX>0.5</hotspotX>
+                        <hotspotY>0.5</hotspotY>
+                        <angle>0</angle>
+                        <opacity>0</opacity>
                     </world>
                 </instance>
             </instances>
